Fix issue with scroll to top button - scroll to top button was overlapping with copyright box at the bottom of page, fixed this so that when you hover over the the button it functions correctly

--- a/style.css
+++ b/style.css
@@ -231,5 +231,6 @@ blockquote {
     display: flex;
     justify-content: center;
     color: white;
+    margin-right: 30px;
     opacity: 0.7;
 }
